<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".OneRecipePage">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="228dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="258dp"
            android:layout_height="79dp"
            android:text="@string/recipe_name"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="27dp" />
    </android.support.constraint.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recipePhoto"
        android:layout_width="165dp"
        android:layout_height="152dp"
        android:src="@drawable/pizza"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="2dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/label_Ingredients"
        android:layout_width="177dp"
        android:layout_height="30dp"
        android:text="@string/ingredients"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="361dp"
        android:layout_height="152dp"
        android:text="TextView"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/label_Instructions"
        android:layout_width="197dp"
        android:layout_height="32dp"
        android:text="@string/instructions"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="451dp" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="359dp"
        android:layout_height="152dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="494dp" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="logout"
        android:text="@string/label_btn_logout"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="add"
        android:text="@string/label_btn_add"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogout" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="back"
        android:text="@string/label_btn_back"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>