<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_level_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="16dp"
    tools:context=".AddNewRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_layout_btn_row">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_txt_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittxt_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:textSize="@dimen/dans_text_size"
                    android:textStyle="bold"
                    android:inputType="textShortMessage"
                    android:scrollHorizontally="false"
                    android:maxLines="1"
                    android:maxLength="35"
                    android:hint="@string/hint_recipe_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_recipe_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/layout_txt_recipe_name"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/edittxt_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:hint="@string/hint_enter_recipe"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:scrollHorizontally="false"
                    android:textSize="@dimen/dans_text_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/parent_linear_layout"
                android:layout_below="@id/layout_recipe_description"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Drinks"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food"/>

            </RadioGroup>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/parent_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/layout_recipe_description">

                <Button
                    android:id="@+id/btn_add_an_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_ingredient"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/child_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputfield_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:hint="@string/hint_ingredient"
                        android:inputType="textShortMessage"/>

                    <Button
                        android:id="@+id/delete_button"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/label_btn_delete_row"
                        android:onClick="onDelete"/>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

        <LinearLayout
            android:id="@+id/linear_layout_btn_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_previous_from_add_new_recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_btn_back"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/btn_save_recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_btn_save_info"
                android:onClick="onSaveData"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

</RelativeLayout>